# simdDistance

./: CMakeLists.txt  Readme.md  distance.cpp  distance.hpp  simd.hpp
benchmarks/: CMakeLists.txt  bench.cpp
tests/: CMakeLists.txt  simd.cpp  test.cpp
